# rust-playground

./: .gitignore  README.md  play.sh
cargo/config/: Cargo.toml  README.md
cargo/config/.cargo/: config
cargo/config/src/: lib.rs
cargo/patch/: Cargo.toml  README.md
cargo/patch/hello-local/: Cargo.toml
cargo/patch/hello-local/src/: lib.rs
cargo/patch/hello-world/: Cargo.toml
cargo/patch/hello-world/src/: main.rs
cargo/patch/hello/src/: lib.rs
cargo/patch/world/: Cargo.toml
cargo/patch/world/src/: lib.rs
ffi/: README.md  _Cargo.toml
ffi/call-assembly/: Cargo.toml  build.rs
ffi/call-assembly/src/: main.rs
ffi/call-c/: Cargo.toml  build.rs
ffi/call-c-nullable-fn-ptr/: build.rs
ffi/call-c-nullable-fn-ptr/src/: hello.c  main.rs
ffi/call-c/src/: hello.c  main.rs
ffi/call-cxx/: Cargo.toml  build.rs
ffi/call-cxx/src/: hello.cc  main.rs
ffi/call-java/: .gitignore  Cargo.toml  README.md  install-kona-jdk.sh
ffi/call-java/java/: HelloWorld.java
ffi/call-java/src/: main.rs
ffi/call-py/: Cargo.toml
ffi/call-py/py/: app.py  quickstart.py
ffi/called-by-c/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
ffi/called-by-c/c/: CMakeLists.txt  main.c
ffi/called-by-c/src/: lib.rs  main.c
ffi/called-by-cxx/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
ffi/called-by-cxx/cxx/: CMakeLists.txt  main.cc
ffi/called-by-cxx/src/: lib.rs
ffi/called-by-go/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
ffi/called-by-go/go/: hello.h  main.go  wrapper.h
ffi/called-by-go/src/: lib.rs
