[package]
name = "helloworld"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@alumni.sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "helloworld"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
