[package]
name = "world"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hello]
git = "https://github.com/sammyne/rust-playground.git"
rev = "9c95d048a24e701050ed2d4ba27749c5e3a41dda"