[package]
name = "world"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hello]
git = "https://github.com/sammyne/rust-playground.git"
rev = "a75e59cb6080cfb3d16165dc98adb9ee300ca1d1"