[package]
name = "world"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hello]
git = "https://github.com/sammyne/rust-playground.git"
rev = "ac5e18d9433c028ea7c0453e45cb68c97d5234b8"